[workspace]
resolver = "2"
members = [
  "ntex",
  "ntex-codec",
  "ntex-router",
  "ntex-rt",
  "ntex-service",
  "ntex-macros",
  "ntex-util",
]

[workspace.lints.rust]
dead_code = "allow"

[workspace.lints.clippy]
enum_variant_names = "allow"
uninit_assumed_init = "allow"
never_loop = "allow"

[patch.crates-io]
ntex = { path = "ntex" }
ntex-codec = { path = "ntex-codec" }
ntex-router = { path = "ntex-router" }
ntex-rt = { path = "ntex-rt" }
ntex-service = { path = "ntex-service" }
ntex-macros = { path = "ntex-macros" }
ntex-util = { path = "ntex-util" }
