[package]
name = "ntex-codec"
version = "0.4.1"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Utilities for encoding and decoding frames"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-codec/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2021"

[lib]
name = "ntex_codec"
path = "src/lib.rs"

[dependencies]
bitflags = "2.6"
bytes = "1.6"
ntex-util = "0.1.1"
log = "0.4"
tokio = { version = "1", default-features = false }

[dev-dependencies]
ntex = "0.3.22"
futures = "0.3"
