[package]
name = "ntex-service"
version = "0.1.8"
authors = ["ntex contributors <team@ntex.rs>"]
description = "ntex service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-service/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2021"

[lib]
name = "ntex_service"
path = "src/lib.rs"

[dependencies]
ntex-util = "0.1.1"
pin-project-lite = "0.2"

[dev-dependencies]
