[package]
name = "ntex"
version = "0.4.1"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Framework for composable network services"
readme = "README.md"
keywords = ["ntex", "networking", "framework", "async", "futures"]
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex/"
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]
license = "MIT"
edition = "2021"

[lints]
workspace = true

[package.metadata.docs.rs]
features = ["openssl", "rustls", "compress", "cookie"]

[lib]
name = "ntex"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls support
rustls = ["rust-tls", "webpki-roots", "tokio-rustls"]

# enable compressison support
compress = ["flate2", "brotli2"]

# enable cookie support
cookie = ["coo-kie", "coo-kie/percent-encode"]

# url support
url = ["url-pkg"]

[dependencies]
ntex-codec = "0.4.1"
ntex-rt = "0.2.2"
ntex-router = "0.4.3"
ntex-service = "0.1.8"
ntex-macros = "0.1.3"
ntex-util = "0.1.1"

base64 = "0.22"
bitflags = "2.6"
bytes = { version = "1.6", features = ["serde"] }
bytestring = { version = "1.3", features = ["serde"] }
derive_more = "0.99"
encoding_rs = "0.8"
futures-core = { version = "0.3", default-features = false, features = [
    "alloc",
] }
futures-sink = { version = "0.3", default-features = false, features = [
    "alloc",
] }
ahash = "0.8"
h2 = "0.3"
http = "0.2"
httparse = "1.9"
httpdate = "1.0"
log = "0.4"
mime = "0.3"
mio = { version = "0.8", features = ["os-poll", "net"] }
num_cpus = "1.16"
nanorand = { version = "0.7", default-features = false, features = [
    "std",
    "wyrand",
] }
percent-encoding = "2.3"
pin-project-lite = "0.2"
regex = { version = "1.10", default-features = false, features = ["std"] }
sha-1 = "0.10"
slab = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
socket2 = "0.5"
url-pkg = { version = "2.5", package = "url", optional = true }
coo-kie = { version = "0.18", package = "cookie", optional = true }
tokio = { version = "1", default-features = false, features = ["sync"] }
parking_lot = "0.12"

# openssl
open-ssl = { version = "0.10", package = "openssl", optional = true }
tokio-openssl = { version = "0.6", optional = true }

# rustls
rust-tls = { version = "0.23", package = "rustls", default-features = false, optional = true }
#webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-rustls = { version = "0.26", default-features = false, optional = true }

# compression
brotli2 = { version = "0.3", optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
env_logger = "0.11"
rand = "0.8"
time = "0.3"
#open-ssl = { version="0.10", package = "openssl" }
#rust-tls = { version = "0.23", package = "rustls" }
#webpki = "0.21"
futures = "0.3"
